# neural_network_cpp

./: CMakeLists.txt  README.md  input.csv  out.csv
_dev/: form.fbp
neuro/: fingerprint.pb  keras_metadata.pb  saved_model.pb
neuro/variables/: variables.data-00000-of-00001  variables.index
py/: gen.py  less.py
src/: dataglobal.cpp  dataglobal.h  main.cpp  mainframe.cpp  mainframe.h  neurodata.cpp  neurodata.h  resicon.rc  savecsv.cpp  savecsv.h
